Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjNumberWrapped.quorum
class main
    action main
        Integer i = 7.5
    end
end